--- a/newsView.html
+++ b/newsView.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-<div>News</div>
-</body>
-</html>
+<div class="pull-left">
+    <span ng-repeat="new in news">{{new}}</span>
+</div>
+<div class="pull-right">News from right</div>
