--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="bootstrap.css" rel="stylesheet">
     <link href="bootstrap-theme.css" rel="stylesheet">
     <script src="angular.js"></script>
-    <script src="angular-route.js"></script>
+    <script src="angular-ui-router.js"></script>
     <script src="app.js"></script>
     <script src="login/loginDirective.js"></script>
     <script src="news/newsDirective.js"></script>
@@ -15,6 +15,6 @@
     <script src="news/newsModule.js"></script>
 </head>
 <body ng-controller="mainCtrl">
-    <ng-view></ng-view>
+    <ui-view></ui-view>
 </body>
 </html>
