--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link href="bootstrap.css" rel="stylesheet">
-    <link href="bootstrap-theme.css" rel="stylesheet">
-    <script src="angular.js"></script>
-    <script src="angular-ui-router.js"></script>
+    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <!--<link href="bootstrap-theme.css" rel="stylesheet">-->
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app.js"></script>
     <script src="login/loginDirective.js"></script>
     <script src="news/newsDirective.js"></script>
