--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html ng-app="app">
 <head>
     <meta charset="UTF-8">
@@ -7,12 +7,12 @@
     <!--<link href="bootstrap-theme.css" rel="stylesheet">-->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="app.js"></script>
-    <script src="login/loginDirective.js"></script>
-    <script src="news/newsDirective.js"></script>
-    <script src="requestsService.js"></script>
-    <script src="login/loginModule.js"></script>
-    <script src="news/newsModule.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/login/loginDirective.js"></script>
+    <script src="app/news/newsDirective.js"></script>
+    <script src="app/requestsService.js"></script>
+    <script src="app/login/loginModule.js"></script>
+    <script src="app/news/newsModule.js"></script>
 </head>
 <body ng-controller="mainCtrl">
     <ui-view></ui-view>
