move controllers to directives, add parameter to the newsDirective derictive.

--- a/app/login/loginView.html
+++ b/app/login/loginView.html
@@ -1,4 +1,4 @@
-<div class="modal-dialog" ng-controller="loginCtrl">
+<div class="modal-dialog">
     <div class="form-group">
         <label>Username</label>
         <input name="username" class="form-control" ng-model="username" required />
