--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <script src="app/app.js"></script>
     <script src="app/login/loginDirective.js"></script>
     <script src="app/news/newsDirective.js"></script>
-    <script src="app/requestsService.js"></script>
-    <script src="app/login/loginModule.js"></script>
-    <script src="app/news/newsModule.js"></script>
+    <script src="app/services/requestsService.js"></script>
+    <script src="app/news/utilController.js"></script>
 </head>
 <body ng-controller="mainCtrl">
     <ui-view></ui-view>
