add toolbar, menu, searchInput and logo directives.

--- a/app/pages/newsViewDetails.html
+++ b/app/pages/newsViewDetails.html
@@ -1,1 +1,2 @@
+<toolbar-view></toolbar-view>
 <news-detail-view id="'Csh!WKUS-TAL-DOCS-PHC-%257B6598E77F-77C0-46EE-9E94-9B8517637446%257D'"></news-detail-view>
