--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <!--<link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">-->
     <!--<link href="bootstrap-theme.css" rel="stylesheet">-->
+    <link href="app/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="app/dist/css/customStyles.css" rel="stylesheet">
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/app.js"></script>
     <script src="app/login/loginDirective.js"></script>
     <script src="app/news/newsDirective.js"></script>
+    <script src="app/toolbar/toolbarDirective.js"></script>
+    <script src="app/toolbar/menuDirective.js"></script>
+    <script src="app/toolbar/searchInputDirective.js"></script>
+    <script src="app/toolbar/logoDirective.js"></script>
     <script src="app/services/requestsService.js"></script>
 </head>
 <body ng-controller="mainCtrl">
