--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="app/dist/css/customStyles.css" rel="stylesheet">
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <!--<script src="app/dist/scripts/all.js"></script>-->
     <script src="app/app.js"></script>
     <script src="app/login/loginDirective.js"></script>
     <script src="app/news/newsDirective.js"></script>
