--- a/app/search/searchClustersView.html
+++ b/app/search/searchClustersView.html
@@ -1,1 +1,17 @@
-<div ng-repeat="sr in searchResult">{{sr}}</div>
+<div class="wrapper">
+    <div class="stripeWithBtn">
+        <div class="wrapperBtn">
+            <div class="btns"><span class="homeBtnValue">Home</span></div>
+            <span class="arrow"></span>
+            <div class="btns resultsBtn"><span class="resultsBtnValue">Search Results</span></div>
+        </div>
+    </div>
+    <div>
+        <div>{{totalResults}} <span>results for {{searchQuery}}</span></div>
+    </div>
+    <div ng-repeat="sr in searchResult">{{sr}}</div>
+    <div class="loader">
+        <!--<div class="loader">Loading...</div>-->
+        <div class="spinner-loader"></div>
+    </div>
+</div>
