--- a/app/search/searchClustersView.html
+++ b/app/search/searchClustersView.html
@@ -9,9 +9,8 @@
     <div>
         <div>{{totalResults}} <span>results for {{searchQuery}}</span></div>
     </div>
-    <div ng-repeat="sr in searchResult">{{sr}}</div>
-    <div class="loader">
-        <!--<div class="loader">Loading...</div>-->
-        <div class="spinner-loader"></div>
+    <div class="searchResultContent">
     </div>
+    <div ng-repeat="sr in searchResult">{{sr}}</div>
+    <div class="loader">Loading...</div>
 </div>
