add display search results feature.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--<script src="app/dist/scripts/all.js"></script>-->
     <script src="app/app.js"></script>
     <script src="app/login/loginDirective.js"></script>
-    <script src="app/news/newsDirective.js"></script>
+    <script src="app/news/homeDirective.js"></script>
     <script src="app/toolbar/toolbarDirective.js"></script>
     <script src="app/toolbar/menu/menuDirective.js"></script>
     <script src="app/toolbar/searchInput/searchInputDirective.js"></script>
