--- a/app/search/tpl/searchClustersView.html
+++ b/app/search/tpl/searchClustersView.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div class="stripeWithBtn">
         <div class="wrapperBtn">
-            <div class="btns"><span class="homeBtnValue">Home</span></div>
+            <div class="btns" ng-click="navigateToHome()"><span class="homeBtnValue">Home</span></div>
             <span class="arrow"></span>
             <div class="btns resultsBtn"><span class="resultsBtnValue">Search Results</span></div>
         </div>
