--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="app/toolbar/searchInput/searchInputDirective.js"></script>
     <script src="app/toolbar/logo/logoDirective.js"></script>
     <script src="app/search/searchManager.js"></script>
+    <script src="app/search/loadingSpin/loadingSpin.js"></script>
     <script src="app/services/requestsService.js"></script>
     <script src="app/services/searchService.js"></script>
     <script src="app/services/searchModelService.js"></script>
