--- a/app/search/tpl/searchClustersView.html
+++ b/app/search/tpl/searchClustersView.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="mainContentOfThePage">
     <div class="stripeWithBtn">
         <div class="wrapperBtn">
             <div class="btns" ng-click="navigateToHome()"><span class="homeBtnValue">Home</span></div>
