--- a/app/toolbar/menu/menuView.html
+++ b/app/toolbar/menu/menuView.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="menuIcon" ng-click="toggleMenu($event)"></div>
-	<div class="menuContent" ng-show="menuOpened">
+	<div id="menuContent" class="menuContent">
 			<ul class="menuList">
 				<li class="menuHeader">Home Pages</li>
 				<li>
