--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
     <script src="app/toolbar/logo/logoDirective.js"></script>
     <script src="app/search/searchManager.js"></script>
     <script src="app/search/loadingSpin/loadingSpin.js"></script>
+    <script src="app/search/sorting/sorting.js"></script>
     <script src="app/services/requestsService.js"></script>
     <script src="app/services/searchService.js"></script>
     <script src="app/services/searchModelService.js"></script>
+    <script src="app/services/configService.js"></script>
 </head>
-<body ng-controller="mainCtrl">
+<body id="body" ng-controller="mainCtrl">
     <ui-view></ui-view>
 </body>
 </html>
