--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="app/services/configService.js"></script>
 </head>
 <body id="body" ng-controller="mainCtrl">
+    <div id="overlay"></div>
     <ui-view></ui-view>
 </body>
 </html>
