refactoring loading spin template.

--- a/app/search/loadingSpin/loadingSpinView.html
+++ b/app/search/loadingSpin/loadingSpinView.html
@@ -1,1 +1,3 @@
-<div class="loader" ng-hide="searchComplete" ng-show="searchComplete">Loading...</div>
+<div ng-hide="searchComplete" ng-show="searchComplete" class="loaderWrapper">
+    <div class="loader" >Loading...</div>
+</div>
