--- a/app/search/tpl/searchClustersView.html
+++ b/app/search/tpl/searchClustersView.html
@@ -12,7 +12,7 @@
         <span class="quote">{{searchQuery}}</span>
         <sorting-view></sorting-view>
     </div>
-    <div id="searchResultContentId" class="searchResultContent loadingBGColor">
+    <div id="searchResultContentId" class="searchResultContent">
         <div ng-repeat="cluster in clusters" ng-show="searchComplete">
             <div class="clusterHeader">
                 <div class="clusterTitle">{{cluster.title}}
