add sorting for search.

--- a/app/search/sorting/sortingView.html
+++ b/app/search/sorting/sortingView.html
@@ -1,5 +1,5 @@
 <div class="floatRight">
-    <div class="sortingBox" ng-click="toggleMenu($event)">
+    <div class="sortingBox" ng-click="toggleSortMenu($event)">
         <span>{{selectedCriteria}}</span>
     </div>
     <div id="sortMenu" ng-show="sortMenu" class="sortingBoxContent">
