--- a/app/search/loadingSpin/loadingSpinView.html
+++ b/app/search/loadingSpin/loadingSpinView.html
@@ -1,3 +1,3 @@
-<div ng-hide="searchComplete" ng-show="searchComplete" class="loaderWrapper">
+<div ng-hide="myState" class="loaderWrapper">
     <div class="loader" >Loading...</div>
 </div>
