--- a/app/toolbar/toolbarView.html
+++ b/app/toolbar/toolbarView.html
@@ -1,5 +1,1 @@
-<div class="toolbar">
-    <menu-view></menu-view>
-    <search-input-view></search-input-view>
-    <logo-view></logo-view>
-</div>
+<div ng-transclude></div>
