--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="app/search/searchManager.js"></script>
     <script src="app/search/loadingSpin/loadingSpin.js"></script>
     <script src="app/search/sorting/sorting.js"></script>
+    <script src="app/search/breadcrumb/breadcrumb.js"></script>
     <script src="app/services/requestsService.js"></script>
     <script src="app/services/searchService.js"></script>
     <script src="app/services/searchModelService.js"></script>
